--- a/phylotree_template.html
+++ b/phylotree_template.html
@@ -3,10 +3,19 @@
 
 <head>
   <meta charset="utf-8">
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore-min.js" charset="utf-8"></script>
+
+  <link rel="stylesheet" href="https://netdna.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+  <link rel="stylesheet" href="https://netdna.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap-theme.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.12.0/styles/default.min.css">
+
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.12.0/highlight.min.js"></script>
+  <script src="https://code.jquery.com/jquery.js"></script>
+  <script src="https://netdna.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
   <script src="https://d3js.org/d3.v3.min.js"></script>
-  <script src="https://unpkg.com/phylotree/phylotree.js"></script>
-  <link href="https://unpkg.com/phylotree/phylotree.css" rel="stylesheet">
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore-min.js" charset="utf-8"></script>
+
+  <link rel="stylesheet" href="https://veg.github.io/phylotree.js/phylotree.css">
+  <script src="https://veg.github.io/phylotree.js/phylotree.js"></script>
 </head>
 
 <body>
@@ -15,9 +24,9 @@
     <script>
       var height = 800;
       var width = 1000;
+      // tree from Yokoyama et al http://www.ncbi.nlm.nih.gov/pubmed/18768804
       var newick_path = "example_tree.newick";
 
-      // tree from Yokoyama et al http://www.ncbi.nlm.nih.gov/pubmed/18768804
       d3.text(newick_path, function (newick) {
 	  var tree = d3.layout.phylotree()
 	  // create a tree layout object
